loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:2: error: not found: value estFAceMur
while(!estFAceMur()){
       ^